// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`view_type_toggle ViewTypeToggle should render grid selection correctly 1`] = `
<EuiButtonGroup
  color="primary"
  data-test-subj="viewTypeToggleButton"
  idSelected="grid"
  legend="View type toggle control"
  onChange={[Function]}
  options={
    Array [
      Object {
        "iconType": "grid",
        "id": "grid",
        "label": "Grid view",
      },
      Object {
        "iconType": "list",
        "id": "list",
        "label": "List view",
      },
    ]
  }
/>
`;

exports[`view_type_toggle ViewTypeToggle should render list selection correctly 1`] = `
<EuiButtonGroup
  color="primary"
  data-test-subj="viewTypeToggleButton"
  idSelected="list"
  legend="View type toggle control"
  onChange={[Function]}
  options={
    Array [
      Object {
        "iconType": "grid",
        "id": "grid",
        "label": "Grid view",
      },
      Object {
        "iconType": "list",
        "id": "list",
        "label": "List view",
      },
    ]
  }
/>
`;
